--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,5 @@
     "lib": ["DOM", "ES6", "ES2017"],
     "types": ["foundry-pc-types"]
   },
-  "include": ["global.d.ts", "./src"]
+  "include": ["global.d.ts", "./src", "modules"]
 }
